# TPM-Fuzzer

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DEVELOPER.md  Dockerfile  Dockerfile.fuzzer  Dockerfile.simulator  Dockerfile.test  Dockerfile.tools  LICENSE  README.md  config.yaml  docker-compose.yml  flake.nix  shell.nix
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  gcp.yml
config/: README.md
coverage-history/: history.csv
docs/: ARCHITECTURE.md  CUSTOM_TPM.md  DEVELOPER.md  FUTURE_WORK.md  SEEDS.md
example/: CMakeLists.txt  wrapper.cc
fuzzer/: CMakeLists.txt  README.md
fuzzer/include/: CMakeLists.txt
fuzzer/include/harness/: tpm_wrapper.h
fuzzer/include/parser/: byte_parser.h
fuzzer/proto/: tpm_commands.proto
fuzzer/proto/commands/: tpm_createprimary.proto  tpm_getrandom.proto
fuzzer/proto/constants/: tpm_alg.proto  tpm_rh.proto  tpm_st.proto
fuzzer/proto/types/: tpm2b_digest.proto  tpm2b_public.proto  tpm2b_sensitive_create.proto  tpm_header.proto
fuzzer/src/: fuzzer.cc  proto-fuzzer.cc  tester.cc
fuzzer/src/harness/: tpm_wrapper.c
fuzzer/src/parser/: byte_parser.cc
fuzzer/test/: CMakeLists.txt
fuzzer/test/harness/: tpm_wrapper_test.cc
fuzzer/test/parser/: byte_parser_test.cc
fuzzer/tests/: CMakeLists.txt
fuzzer/tests/harness/: tpm_wrapper_test.cc
fuzzer/tests/parser/: byte_parser_test.cc
include/: CMakeLists.txt
include/harness/: command_attributes.h  proto_conversion.h  proto_normalization.h  proto_postprocessors.h  session_auth.h
include/parser/: byte_parser.h
include/proto/: tpm_commands.proto
include/proto/commands/: tpm_create.proto  tpm_createprimary.proto  tpm_startauthsession.proto
include/proto/constants/: tpm_alg.proto  tpm_cc.proto  tpm_rh.proto  tpm_se.proto  tpm_st.proto
include/proto/tpm_commands/: tpm_clear.proto  tpm_create.proto  tpm_createprimary.proto  tpm_getrandom.proto  tpm_load.proto  tpm_makecredential.proto  tpm_nv_definespace.proto  tpm_pcr_allocate.proto  tpm_pcr_event.proto  tpm_pcr_read.proto  tpm_pcr_setauthpolicy.proto  tpm_rsa_decrypt.proto  tpm_rsa_encrypt.proto  tpm_setprimarypolicy.proto  tpm_startauthsession.proto
include/proto/tpm_types/: tpm2b_data.proto  tpm2b_digest.proto  tpm2b_event.proto  tpm2b_private.proto  tpm2b_public.proto  tpm2b_public_key_rsa.proto  tpm2b_sensitive_create.proto  tpm_handle.proto  tpm_header.proto  tpm_nv_public.proto  tpm_session.proto  tpml_pcr_selection.proto  tpmt_rsa_decrypt.proto  tpmt_sym_def.proto
include/proto/types/: tpm2b_data.proto  tpm_handle.proto  tpm_session.proto  tpml_pcr_selection.proto  tpmt_sym_def.proto
infrastructure/: README.md  main.tf  terraform.tf  terraform.tfstate  terraform.tfvars  variables.tf
patches/: README.md  determinism.patch
proto-seeds/: GetRandom-variant0
scripts/: build-simulator.sh  config_corpus.py  config_loader.py  gen_tpm2_hash_seeds.py  generate-pb.sh  generate-seeds.py  generate-seeds.sh  generate-tpm2-create-seeds.py  run-fuzzer.sh  start-fuzzer.sh  test-seed.sh  test_seed.sh  track-coverage
scripts/docker/: combine-coverage.sh  start-fuzzer.sh
scripts/python_util/: __init__.py  tpm_commands.py  tpm_types.py
seeds/: TPMCreate-variant0-202601171722  TPMCreate-variant1-202601171722  TPMCreate-variant1-202601241713  TPMCreate-variant2-202601171722  TPMCreate-variant3-202601171722  TPMCreate-variant3-202601241713  TPMCreate-variant4-202601171722  TPMCreate-variant4-202601241713  TPMCreate-variant5-202601171722  TPMCreatePrimary-variant0-202601192159  TPMCreatePrimary-variant0-202601241713  TPMCreatePrimary-variant1-202601241713  TPMCreatePrimary-variant2-202601241713  TPMGetCapability-variant1-202601301630  TPMGetCapability-variant11-202601301630  TPMGetCapability-variant13-202601301630  TPMGetCapability-variant3-202601301630  TPMGetCapability-variant4-202601301630  TPMGetCapability-variant6-202601301630  TPMGetCapability-variant7-202601301630  TPMGetCapability-variant8-202601301630  TPMGetCapability-variant9-202601301630  TPMGetRandom-variant0-202601141739  TPMGetRandom-variant0-202601151930  TPMGetRandom-variant0-202601241713  TPMGetRandom-variant1-202601141739  TPMGetRandom-variant1-202601142016  TPMGetRandom-variant2-202601141605  TPMGetRandom-variant2-202601141739  TPMGetRandom-variant2-202601151930  TPMGetRandom-variant2-202601241713  TPMGetRandom-variant3-202601141605  TPMGetRandom-variant3-202601141739  TPMGetRandom-variant3-202601151930  TPMGetRandom-variant4-202601151930  TPMGetRandom-variant4-202601241713  TPMGetRandom-variant5-202601151930  TPMGetRandom-variant6-202601151930  TPMGetRandom-variant7-202601151930  TPMGetRandom-variant7-202601160646  (+27 more)
seeds/bytearray/: TPMClear-variant1-202605132314  TPMCreate-variant0-202604290319  TPMCreate-variant2-202604290319  TPMCreate-variant5-202604290319  TPMCreatePrimary-variant0-202604290319  TPMCreatePrimary-variant1-202604290319  TPMGetCapability-variant0-202604290319  TPMGetCapability-variant12-202604290319  TPMGetCapability-variant14-202604290319  TPMGetCapability-variant2-202604290319  TPMGetRandom-variant5-202604290319  TPMGetRandom-variant6-202604290319  TPMHash-variant0-202604290319  TPMHash-variant1-202604290319  TPMIncrementalSelfTest-variant1-202604290319  TPMIncrementalSelfTest-variant2-202604290319  TPMLoad-variant0-202605181324  TPMLoad-variant1-202605181324  TPMLoad-variant2-202605181324  TPMLoad-variant3-202605181324  TPMLoadExternal-variant1-202604290319  TPMMakeCredential-variant0-202605250536  TPMMakeCredential-variant1-202605250536  TPMMakeCredential-variant2-202605250536  TPMNVDefineSpace-variant0-202605140303  TPMNVDefineSpace-variant1-202605140303  TPMNVDefineSpace-variant1-202606042300  TPMNVExtend-variant0-202604290319  TPMNVExtend-variant1-202604290319  TPMNVExtend-variant2-202604290319  (+51 more)
src/: fuzzer.cc  proto-fuzzer.cc
test-runner/: README.md  test_runner.py  test_test_runner.py  test_tpm_client.py  tpm_client.py
test_runner/: config.yaml  config_loader.py  test_config_loader.py
tests/: CMakeLists.txt  test_config_loader.py
tests/parser/: byte_parser_test.cc
(+139 files in other folders)
